--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,32 @@
-// TODO
+.content {
+  button {
+    font-size: 1.125rem;
+    border: 0;
+    background-color: transparent;
+    color: var(--pink-500);
+    line-height: 1.5rem;
+    margin: 4rem 0 5rem 0;
+    font-weight: 600;
+  }
+  main {
+    > a {
+      display: block;
+    }
+  }
+}
+
+.post {
+  & + &.post {
+    margin-top: 3.2rem;
+  }
+  h1 {
+    margin-bottom: 0.5rem;
+    line-height: 3.1rem;
+  }
+  p {
+    font-size: 1.375rem;
+    color: var(--gray-100);
+    margin-bottom: 1.6rem;
+    line-height: 1.5rem;
+  }
+}
